// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BottomNav /> shapshots should render empty 1`] = `
<div
  className="bottomNav "
  style={undefined}
/>
`;

exports[`<BottomNav /> shapshots should render with the given children 1`] = `
<div
  className="bottomNav "
  style={undefined}
>
  <div>
    child1
  </div>
  <div>
    child2
  </div>
</div>
`;

exports[`<BottomNav /> shapshots should render with the given className 1`] = `
<div
  className="bottomNav myClass"
  style={undefined}
/>
`;

exports[`<BottomNav /> shapshots should render with the given style 1`] = `
<div
  className="bottomNav "
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
/>
`;
